@@ -1,0 +1,8 @@
+CORE broken-smt-backend
+nand4.sv
+--bound 0
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
+--
