@@ -3,6 +3,7 @@
 * Verilog: bugfix for $onehot0
 * Verilog: fix for primitive gates with more than two inputs
 * Verilog: Support $past when using AIG-based engines
+* Verilog: fix for nor/nand/xnor primitive gates
 
 # EBMC 5.4
 
